code style inspection cleanup